[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/player/weapons/projectiles/Hand_SanitizerGreen.png" type="Texture" id=1]
[ext_resource path="res://Weapons/RocketRed.gd" type="Script" id=2]

[node name="RocketRed" type="Sprite"]
texture = ExtResource( 1 )
offset = Vector2( 0, 0.5 )
script = ExtResource( 2 )

[node name="RocketHitbox" type="Area2D" parent="."]
position = Vector2( 0, 0.5 )
collision_layer = 0
collision_mask = 36

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="RocketHitbox"]
polygon = PoolVector2Array( -5, -2, -4, -2, -4, -3, 1, -3, 1, -2, 2, -2, 2, -1, 4, -1, 4, -3, 5, -3, 5, 1, 4, 1, 4, 0, 2, 0, 2, 1, 1, 1, 1, 2, -4, 2, -4, 1, -5, 1 )

[node name="Despawn" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 4, 0 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -17, 0 )
scale = Vector2( 3.83333, 1 )
rect = Rect2( -6, -3.5, 12, 7 )
__meta__ = {
"_editor_description_": ""
}
[connection signal="body_entered" from="RocketHitbox" to="." method="_on_RocketHitbox_body_entered"]
[connection signal="timeout" from="Despawn" to="." method="_on_Despawn_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
